--- a/index.html
+++ b/index.html
@@ -4,16 +4,32 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-    <script type="module" crossorigin src="https://feelpay-launcher.vercel.app/laucher.js"></script>
-    <link rel="stylesheet" crossorigin href="https://feelpay-launcher.vercel.app/assets/launcher.css">
+    <title>FeelPay + VanillaJS</title>
+    <script
+      type="module"
+      src="https://api.dreamfeel.me/assets/launcher.js"
+    ></script>
+    <script type="module" src="main.js"></script>
   </head>
   <body>
-    <div id="app"></div>
-     <feelpay-launcher
+    <feelpay-launcher
       clientSecret="0a7013c0fac16ea352b45cd5b52534bd"
       clientKey="e07fea12a51701c1"
-      order="{}"
+      paymentRef=""
+      description="Feelpay Donation"
+      amount="1"
+      currency="KES"
+      checkoutPage="https://feelpay-vanillajs.vercel.app"
+      webHookUrl="https://feelpay.io/callback"
+      customerName="John Doe"
+      customerEmail="dreamer@example.com"
+      customerPhone="079XXXXXX"
+      shippingRegion="Nairobi County"
+      shippingCityTown="Westlands"
+      shippingStreet="Westlands"
+      shippingDetailedAddress="Kericho road"
+      shippingLat="1.2921"
+      shippingLng="36.82195"
     />
   </body>
 </html>
