--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <feelpay-launcher
-      clientSecret="0a7013c0fac16ea352b45cd5b52534bd"
+    clientIdentifier="0a7013c0fac16ea352b45cd5b52534bd"
       clientKey="e07fea12a51701c1"
       paymentRef=""
       description="Feelpay Donation"
